syntax = "proto3";

package LiveSplit.Lazysplits.Proto;

message CsMessage {
	int32 message_id = 1;
	MessageType message_type = 2;

	bool pipe_connected = 3;

	uint32 target_index = 4;

	enum MessageType{
		NONE = 0;
		PIPE_INFO = 1;
		SOURCE_CV_TARGET = 2;
	}
}